plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

apply from: "properties.gradle"

evaluationDependsOn(":MovingWorld")

def branch
if (System.env.BRANCH_NAME) {
    // Jenkins support
    branch = System.env.BRANCH_NAME
    branch = branch.substring(branch.lastIndexOf('/') + 1)
} else {
    branch = 'git rev-parse --abbrev-ref HEAD'.execute().in.text.trim()
}
def commits = 'git rev-list --count HEAD'.execute().in.text.trim()
def dirty = !'git diff-index HEAD'.execute().in.text.trim().isEmpty()

version = branch + '-' + modVersion + '.' + commits + (dirty ? '-dirty' : '')
group = modGroup

base {
    archivesName = modBaseName
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
configurations {
    runtimeOnly.exclude group: "com.tridevmc.MovingWorld"
}

minecraft {
    mappings channel: "official", version: mappingsVersion

    copyIdeResources = true

    runs {
        // applies to all the run configs below
        configureEach {
            workingDirectory project.file("run")

            // Recommended logging data for a userdev environment
            property "forge.logging.markers", "REGISTRIES"

            // Recommended logging level for the console
            property "forge.logging.console.level", "debug"

            mods {
                "${modBaseName}" {
                    source sourceSets.main
                }
                movingworld {
                    sources project(":MovingWorld").sourceSets.main
                }
            }
        }

        client {
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            property 'forge.enabledGameTestNamespaces', modBaseName

            for (String s :"-XX:+UseG1GC -Xmx2G -Xms2G -Dsun.rmi.dgc.server.gcInterval=2147483646 -XX:+UnlockExperimentalVMOptions -XX:G1NewSizePercent=20 -XX:G1ReservePercent=20 -XX:MaxGCPauseMillis=50 -XX:G1HeapRegionSize=32M".split(" ")) {
                jvmArgs += s
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.enabledGameTestNamespaces', modBaseName
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', modBaseName
        }

        data {
            // example of overriding the workingDirectory set in configureEach above
            workingDirectory project.file("run_data")

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', modBaseName, '--all', '--output', file('davincisvessels_resources_generated/'), '--existing', file('davincisvessels_resources/')
        }
    }
}

sourceSets {
    main {
        java {
            srcDir "src/main/java"
            // srcDir "MovingWorld/external/compound/src/main/java"
        }
        resources {
            srcDir "src/main/resources"
            exclude "**/.md" 
        }
    }
}

if (gradle.startParameter.taskNames.contains("checkstyle")) {
    task checkstyle {}
    tasks["checkstyle"].dependsOn checkstyleApi
    tasks["checkstyle"].dependsOn checkstyleMain

    tasks["checkstyleApi"].enabled = true
    tasks["checkstyleMain"].enabled = true
    tasks["checkstyleTest"].enabled = false
}

// task setupSubProjects(dependsOn: "MovingWorld:external:compound:buildAll") {
//     // Just an inter-dependency task
// }

repositories {
    // Put repositories for dependencies here
    // ForgeGradle automatically adds the Forge maven and Maven Central for you
}

dependencies {
    compileOnly project(":MovingWorld")

    minecraft "net.minecraftforge:forge:${forgeVersion}"

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

tasks.named('processResources', ProcessResources).configure {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    var replaceProperties = [
            version: version
    ]
    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

compileJava {
    options.compilerArgs << "-Xmaxerrs" << "2000"
    options.compilerArgs << "-Xmaxwarns" << "2"
    options.compilerArgs << "-Xlint:all"
    options.compilerArgs << "-Xdiags:verbose"
    options.compilerArgs << "-encoding" << "UTF-8"
}

javadoc {
    options.setUse(true)
    options.addStringsOption("Xmaxerrs").setValue(["2000"])
    options.addStringsOption("Xmaxwarns").setValue(["2000"])
    options.addStringsOption("Xdoclint:all")
    options.setEncoding("UTF-8")
}

// Example for how to get properties into the manifest for reading by the runtime..
tasks.named('jar', Jar).configure {
    manifest {
        attributes(["Specification-Title"     : "Davincis Vessels",
                    "Specification-Vendor"    : "Trident",
                    "Specification-Version"   : "24.0", // We are version 1 of the modlauncher specification
                    "Implementation-Title"    : project.name,
                    "Implementation-Version"  : "${version}",
                    "Implementation-Vendor"   : "Trident",
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
    }

    // This is the preferred method to reobfuscate your jar file
    finalizedBy 'reobfJar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

jar.enabled = true